--- a/74139-h/74139-h.htm
+++ b/74139-h/74139-h.htm
@@ -646,6 +646,6 @@ there. There were three, all beautiful.</p>
 
 <p>The dirty, science-hating sons.
 </p>
-<div style='text-align:center'>*** END OF THE PROJECT GUTENBERG EBOOK 74139 ***</div>
+</body>
 </html>
 
